# ble-foo

./: .cpplint  .gitignore  CLAUDE.md  CMakeLists.txt  CPPLINT.cfg  CPPLINT_USAGE.md  Dockerfile  LICENSE  Makefile  README.md  sources.list
.claude/: settings.local.json
.cursor/plans/: ble-conn-cli-7aca152f.plan.md  ble-pair-enhancement-cc11710b.plan.md
.devcontainer/: Dockerfile  README.md  devcontainer.json  docker-compose.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
devlogs/test-notes/: ble-pair-enhancement-cc11710b.test.md
specs/001-gio-library-mac/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-gio-library-mac/checklists/: requirements.md
specs/001-gio-library-mac/contracts/: api-contract.md
src/cli/: CPPLINT.cfg  ble_ad.cpp  ble_conn.cpp  ble_pair.cpp  ble_paired.cpp
src/include/bluetooth/: advertising.hpp  device_discovery.hpp
src/lib/bluetooth/: advertising.cpp  device_discovery.cpp
